objects/BMCServiceDesk__SYSQVCalendarView__c.object
<CustomObject>
    <description>This object allows you to store data for the Calendar view of QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__color__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dateTimeField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKDateTimeField</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SYSQVCalendarViews (DATETIMEFIELD)</relationshipLabel>
        <relationshipName>Calendar_DateTimeField</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__displayField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKDisplayField</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SYSQVCalendarViews (DISPLAYFIELD)</relationshipLabel>
        <relationshipName>SYSQVCalendarViewDisplayField</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__sysQVQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVCalendarViews</relationshipLabel>
        <relationshipName>SYSQVCalendarViewQVQuery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__viewType__c</fullName>
        <label>View Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quickview Calendar View</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QVCalendarView -{000}</displayFormat>
        <label>SYSQVCalendarView Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVCalendarViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>